# CRUD-PyMongo-FastAPI

./: .env-example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/v1/: api.py
app/api/v1/routes/: book.py
app/core/: settings.py
app/schemas/: book.py
